* io.c (IO#new):   Documentation for IO#open modes and formatting   [ruby-core#48052] [Bug #7179]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37443 b2dd03c8-39d4-4d8f-98ff-823fe69b080e